# Includes for this level
include_directories(${PROJECT_BINARY_DIR})
include_directories(${PROJECT_SOURCE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/lib)
include_directories(${PROJECT_SOURCE_DIR}/etc/loki/include)
include_directories(${PROJECT_SOURCE_DIR}/etc/lua/src)

# Create the library
add_library(lclib 
  LcBasicObj.cpp
  LcCmdLineArgs.cpp
  LcConstFieldPtr.cpp
  LcDataStructFactory.cpp
  LcDataStructIfc.cpp
  LcDataStructRegistry.cpp
  LcExcept.cpp 
  LcField.cpp
  LcFieldFactory.cpp
  LcFieldPtr.cpp
  LcFileHandler.cpp
  LcFunctionIfc.cpp
  LcHdf5Io.cpp
  LcHdf5IoTmpl.cpp
  LcIoBase.cpp
  LcLibRegistry.cpp
  LcLinAlgebra.cpp
  LcLogRecordHandler.cpp
  LcLogStream.cpp
  LcLogStreamStrm.cpp
  LcLogger.cpp
  LcLuaFuncMap.cpp
  LcLuaState.cpp
  LcLuaTXYZFunction.cpp
  LcLuaTable.cpp
  LcMathLib.cpp
  LcMatrix.cpp
  LcSolverIfc.cpp
  LcStreamHandler.cpp
  LcVec3.cpp
  LcVector.cpp
)
