# Includes for this level
include_directories(${PROJECT_BINARY_DIR})
include_directories(${PROJECT_SOURCE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/lib)
include_directories(${PROJECT_SOURCE_DIR}/etc/loki/include)
include_directories(${PROJECT_SOURCE_DIR}/etc/libb64/include)
include_directories(${PROJECT_SOURCE_DIR}/etc/lua/src)

# Create the library
add_library(lclib 
  LcAlignedRectCoordSys.cpp
  LcBasicObj.cpp
  LcCmdLineArgs.cpp
  LcDataStructIfc.cpp
  LcExcept.cpp 
  LcFileHandler.cpp
  LcFunctionIfc.cpp
  LcHdf5Io.cpp
  LcHdf5IoTmpl.cpp
  LcIoBase.cpp
  LcLibRegistry.cpp
  LcLinAlgebra.cpp
  LcLogRecordHandler.cpp
  LcLogStream.cpp
  LcLogStreamStrm.cpp
  LcLogger.cpp
  LcLuaFuncMap.cpp
  LcLuaMathLib.cpp
  LcLuaObjTypeId.cpp
  LcLuaState.cpp
  LcLuaTXYZFunction.cpp
  LcLuaTable.cpp
  LcLuceeObj.cpp
  LcMathLib.cpp
  LcMatrix.cpp
  LcRectCoordSys.cpp
  LcSolverIfc.cpp
  LcStreamHandler.cpp
  LcTableDescription.cpp
  LcValueDescription.cpp
  LcVec3.cpp
  LcVector.cpp
  LcVectorDescription.cpp
)
